added checkbox in Machine learning results